--- a/Physics Baseball Game/MainWindow.xaml
+++ b/Physics Baseball Game/MainWindow.xaml
@@ -7,6 +7,8 @@
         Title="Physics Baseball Game"
         WindowStyle="None"
         ResizeMode="NoResize"
+        MinWidth="1024"
+        MinHeight="720"
         WindowState="Maximized"
         Background="Black"
         KeyDown="Window_KeyDown">
