--- a/Physics Baseball Game/Views/StrikeZoneView.xaml
+++ b/Physics Baseball Game/Views/StrikeZoneView.xaml
@@ -2,10 +2,10 @@
              x:Name="root"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Background="Transparent">
-    <!-- Single-cell grid so we can center the zone and overlay controls -->
+             Background="Transparent"
+             MinWidth="960"
+             MinHeight="600">
     <Grid Margin="12">
-        <!-- Strike zone centered on screen -->
         <Border Padding="8"
                 Background="#0E1A26"
                 CornerRadius="6"
@@ -13,102 +13,70 @@
                 BorderThickness="1"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
-            <!-- Fixed visual size for the zone, centered -->
-            <Viewbox Width="360" Height="360" Stretch="Uniform">
-                <Grid Width="500" Height="500">
-                    <Grid.Resources>
-                        <SolidColorBrush x:Key="BorderBrush" Color="#35506A"/>
-                        <SolidColorBrush x:Key="OutsideFill" Color="#102131"/>
-                        <SolidColorBrush x:Key="StrikeFill" Color="#1B2E42"/>
-                    </Grid.Resources>
+            <Grid x:Name="ZoneRoot"
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Center">
+                <!-- 1 inch (96 DIPs) => 2 pixels -->
+                <Grid.LayoutTransform>
+                    <ScaleTransform ScaleX="0.0208333333" ScaleY="0.0208333333"/>
+                </Grid.LayoutTransform>
 
-                    <!-- 5x5 grid: inner 3x3 is the strike zone -->
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
+                <Grid.Resources>
+                    <SolidColorBrush x:Key="BorderBrush" Color="#35506A"/>
+                    <SolidColorBrush x:Key="OutsideFill" Color="#102131"/>
+                    <SolidColorBrush x:Key="StrikeFill" Color="#1B2E42"/>
+                </Grid.Resources>
 
-                    <!-- Draw rectangles for all 5x5 cells -->
-                    <ItemsControl Grid.RowSpan="5" Grid.ColumnSpan="5"
-                                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                </Grid>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.Template>
-                            <ControlTemplate TargetType="ItemsControl">
-                                <ItemsPresenter/>
-                            </ControlTemplate>
-                        </ItemsControl.Template>
-                        <ItemsControl.Items>
-                            <!-- Row 0 -->
-                            <Rectangle Grid.Row="0" Grid.Column="0" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="0" Grid.Column="1" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="0" Grid.Column="2" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="0" Grid.Column="3" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="0" Grid.Column="4" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid Rows="5" Columns="5"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.Template>
+                        <ControlTemplate TargetType="ItemsControl">
+                            <ItemsPresenter/>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
+                    <ItemsControl.Items>
+                        <!-- 25 cells: inner 3x3 is strike zone -->
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
 
-                            <!-- Row 1 -->
-                            <Rectangle Grid.Row="1" Grid.Column="0" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="1" Grid.Column="1" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="1" Grid.Column="2" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="1" Grid.Column="3" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="1" Grid.Column="4" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
 
-                            <!-- Row 2 -->
-                            <Rectangle Grid.Row="2" Grid.Column="0" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="2" Grid.Column="1" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="2" Grid.Column="2" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="2" Grid.Column="3" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="2" Grid.Column="4" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
 
-                            <!-- Row 3 -->
-                            <Rectangle Grid.Row="3" Grid.Column="0" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="3" Grid.Column="1" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="3" Grid.Column="2" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="3" Grid.Column="3" Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="3" Grid.Column="4" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource StrikeFill}"  Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
 
-                            <!-- Row 4 -->
-                            <Rectangle Grid.Row="4" Grid.Column="0" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="4" Grid.Column="1" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="4" Grid.Column="2" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="4" Grid.Column="3" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                            <Rectangle Grid.Row="4" Grid.Column="4" Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
-                        </ItemsControl.Items>
-                    </ItemsControl>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                        <Rectangle Fill="{StaticResource OutsideFill}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
+                    </ItemsControl.Items>
+                </ItemsControl>
 
-                    <!-- Overlay canvas for plotted pitches -->
-                    <Canvas x:Name="Overlay" IsHitTestVisible="False"
-                            Grid.RowSpan="5" Grid.ColumnSpan="5"/>
-                </Grid>
-            </Viewbox>
+                <Canvas x:Name="Overlay"
+                        IsHitTestVisible="False"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"/>
+            </Grid>
         </Border>
 
         <!-- Pitcher vs Batter info (top-left) -->
@@ -144,12 +112,10 @@
             <Button Content="Pitch"
                     Width="140" Height="40" Margin="0,0,0,8"
                     Command="{Binding ElementName=root, Path=PitchCommand}"
-                    CommandParameter="{Binding SelectedPitch}"
-                    Click="PitchButton_Click"/>
+                    CommandParameter="{Binding SelectedPitch}"/>
             <Button Content="Next Batter"
                     Width="140" Height="40"
-                    Command="{Binding ElementName=root, Path=NextBatterCommand}"
-                    Click="NextBatterButton_Click"/>
+                    Command="{Binding ElementName=root, Path=NextBatterCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
